# ModernInstallerR

./: Cargo.toml  app.manifest  build.rs  resources.rc
installer_assets/: ApplicationUUID  extra_chars.txt  info.json
modern_uninstaller_r/: Cargo.toml
modern_uninstaller_r/src/: main.rs  model.rs  resources.rs  ui_fonts.rs  uninstall_engine.rs  util.rs
scripts/: build_release.ps1
src/: installer_engine.rs  lib.rs  model.rs  resources.rs  ui_fonts.rs  util.rs  version.rs
