[package]
name = "modern_installer_r"
version = "0.1.0"
edition = "2024"

[lib]
name = "modern_installer_r"
path = "src/lib.rs"

[[bin]]
name = "modern_installer_r"
path = "src/bin/modern_installer_r.rs"

[[bin]]
name = "modern_uninstaller_r"
path = "src/bin/modern_uninstaller_r.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6.0"
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33"
winreg = "0.55"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
