[package]
name = "modern_installer_r"
version = "0.1.0"
edition = "2024"

[lib]
name = "modern_installer_r"
path = "src/lib.rs"

[[bin]]
name = "modern_installer_r"
path = "src/bin/modern_installer_r.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6.0"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "wgpu"] }
flate2 = "1.1"
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.38"
tar = "0.4"
winreg = "0.56"
zip = { version = "8.2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_RestartManager", "Win32_System_Threading"] }
wgpu = { version = "27.0.1", default-features = false, features = ["std", "wgsl", "dx12", "vulkan", "gles"] }

[build-dependencies]
font-subset = "0.1.0"
flate2 = "1.1"
embed-resource = "2.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "unwind"
strip = "symbols"
