[package]
name = "modern_uninstaller_r"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dirs = "6.0"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "wgpu"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.38"
winreg = "0.56"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "unwind"
strip = "symbols"
